<resources>
    <string name="app_name">Tiny Planet Maker</string>
    <string name="hello_world">Size</string>
    <string name="action_settings">Settings</string>
    <string name="action_open_image">Open image</string>
    <string name="action_save_image">Save image</string>
    <string name="action_share">Share</string>
    <string name="external_storage_not_accessible_msg">The external storage is not accessible.</string>
    <string name="external_storage_not_accessible_title">File save error</string>
    <string name="no_file_found_msg">Could not find any TinyPlanet image. Save a planet first.</string>
    <string name="no_file_found_title">No image found</string>
    <string name="file_saved_msg">Image saved.</string>
    <string name="file_load_text">Loading file...</string>
    <string name="file_save_text">Saving file...</string>
    <string name="invert_text">Invert</string>
    <string name="action_help_about_title">About</string>
    <string name="about_msg">Tiny Planet Maker\n© Fabian Hollaus, 2017</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset values</string>
    <string name="action_help">Help</string>
    <string name="action_samples">Load example</string>
    <string name="no_permission_title">Permission required</string>
    <string name="no_saving_permission_msg">Cannot save images, if the permission is not given by the user.</string>
    <string name="no_reading_permission_msg">Cannot load images in a gallery app, if the permission is not given by the user.</string>
    <string name="gestures_fragment_title">Help</string>
    <string name="samples_fragment_title">Select a sample</string>
    <string name="firsttime_dialog_title">Welcome!</string>
    <string name="firsttime_dialog_msg">Do you want to start with an example planet?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="warp_title">Warp</string>
    <string name="crop_title">Crop</string>
    <string name="invert_title">Invert</string>
    <string name="zoom_title">Zoom</string>
    <string name="rotate_title">Rotate</string>
    <string name="fade_title">Blend image border</string>

    <string name="crop_tab">crop_tab</string>
    <string name="invert_tab">invert_tab</string>
    <string name="fade_tab">fade_tab</string>
    <string name="zoom_tab">zoom_tab</string>
    <string name="rotate_tab">rotate_tab</string>
    <string name="warp_tab">warp_tab</string>
    <string name="cancel_text">Cancel</string>
    <string name="snackbar_msg_text">Image saved</string>
    <string name="snackbar_button_text">open</string>
</resources>
