<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/action_share" />
        <item
            android:id="@+id/action_samples"
            android:icon="@drawable/ic_image_black_24dp"
            android:title="@string/action_samples" />
        <item
            android:id="@+id/action_reset"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/action_reset" />
        <item
            android:id="@+id/action_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/action_about" />

    </group>

</menu>