<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_open_file"
        android:title="@string/action_open_image"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_name"
        />

    <item android:id="@+id/action_save_file"
        android:title="@string/action_open_image"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_save_white_24dp"
        />


    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        />

    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:orderInCategory="100"
        app:showAsAction="never"
        />


    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
